Task #001: Enhanced PerformanceTestHarness with advanced JMH integration
- Added runProfilingBenchmark with JVM compilation and GC time tracking
- Added runJvmOptionComparison for testing different JVM configurations
- Added runWarmupStrategyComparison with multiple warmup patterns
- Added runScalabilityAnalysis with ScalabilityAnalysisResult for thread scaling
- Added runGCAlgorithmComparison for GC performance analysis
- Added analyzePerformanceRegression with PerformanceRegressionAnalysis
- Enhanced performance testing with comprehensive JVM profiling and analysis capabilities